Remove right margin to stop controls shifting

--- a/src/components/primary/channels/_account.scss
+++ b/src/components/primary/channels/_account.scss
@@ -6,6 +6,10 @@
     margin-bottom: 0;
     padding: 0;
     background-color: $b1;
+    // Remove right margin to stop controls shifting
+    .avatarWrapper-3YA-_G{
+        margin-right: 0;
+    }
     .avatar-3JE4B3{
         width: 48px;
         height: 48px;
